# groonga

./: .clang-format  .cmake-format.py  .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  Brewfile  CMakeLists.txt  CMakePresets.json  ChangeLog  Dockerfile  Gemfile  INSTALL  LEGAL  Makefile.am  NEWS  README  README.md  Rakefile  Vagrantfile  _config.yml  appveyor.yml  autogen.sh  blog-task.rb  blog_task.rb  build-archive.sh  build.sh  build_windows.bat  bundled_lz4_version  bundled_mecab_naist_jdic_version  compose.yaml  config.h.cmake  config.h.cmake.in  config.sh.in  configure.ac  docker-compose.yml  (+19 more)
apt/: Makefile.am  build-deb.sh  build-in-chroot.sh  groonga-depended-packages  sign-repository.sh  update-repository.sh
apt/debian/: generate-lenny.conf  generate-unstable.conf  release-lenny.conf  release-unstable.conf
apt/ubuntu/: generate-hardy.conf  generate-karmic.conf  generate-lucid.conf  release-hardy.conf  release-karmic.conf  release-lucid.conf
benchmark/: CMakeLists.txt  Makefile.am  bench-between-sequential.c  bench-cache.c  bench-ctx-create.c  bench-distance.c  bench-geo-distance.c  bench-geo-select.c  bench-nfkc.c  bench-query-optimizer.c  bench-range-select.c  bench-result-set-raw.c  bench-result-set.c  bench-table-factory.c
benchmark/lib/: bench-reporter.c  bench-reporter.h  bench-utils.c  bench-utils.h  benchmark.c  benchmark.h
data/: CMakeLists.txt  Makefile.am  groonga-httpd.conf.in  groonga.conf  synonyms.tsv
data/account/: appveyor.gpg.kou  conoha.gpg.yuki  github-groonga-docker.gpg.hayashi  github-groonga-docker.gpg.kou  twitter.gpg.yoshihara  twitter.gpg.yuki
data/html/: CMakeLists.txt  Makefile.am  files.am  html_files.am  nobase_html_files.am  update-files.sh
data/images/: Makefile.am  update-files.sh
data/init.d/: Makefile.am
data/logrotate/: Makefile.am  groonga-httpd
data/logrotate.d/: Makefile.am  groonga-server
data/munin/: Makefile.am  groonga_cpu_load  groonga_cpu_load_  groonga_cpu_time  groonga_cpu_time_  groonga_delta_  groonga_disk  groonga_disk_  groonga_gqtp_n_records  groonga_gqtp_query_performance  groonga_gqtp_status  groonga_gqtp_throughput  groonga_http_cpu_time  groonga_http_disk  groonga_http_n_records  groonga_http_status  groonga_http_throughput  groonga_memory  groonga_memory_  groonga_n_records  groonga_n_records_  groonga_query_performance  groonga_query_performance_  groonga_status  groonga_status_  groonga_throughput  groonga_throughput_
data/scripts/: Makefile.am  groonga-httpd-restart  groonga-httpd-restart.in
data/systemd/: Makefile.am
data/tmpfiles.d/: Makefile.am  groonga.conf
data/travis/: setup.sh
data/windows_event_log/: Makefile.am  provider.man
doc/: .gitignore  API.rd  CMakeLists.txt  Doxyfile  Doxyfile.in  Gemfile  Makefile.am  README  README.ja  announcement-article-generator.rb  create-announcement-article.rb  create-markdown.sh  create-text.sh  deploy.rb  doxygen.md  files.am  files.cmake  header.html  images.mk  requirements.txt  update-edit-po.rb  update-execution-example.rb  update-files.rb  update-files.sh  update-po.rb  update_execution_example.py
doc/bugs/: issue-072a87e92a531f903d1c8c750ae487e857229311.yaml  issue-0813445b4e7e031705443c65de4e56490cfb5f68.yaml  issue-12743ec6cb50faa98ba506825875a65cd4a5114b.yaml  issue-20d25689c0002e77f1882de7292bce7f3eb3f6a6.yaml  issue-35fb457d0882c0fa9c435907ee61db198ceef775.yaml  issue-3b74839bacab741757a7b1ab86c0bc91b69b8da2.yaml  issue-40ba77e1ab1d76f669ec8e158e04e97d6184d8e9.yaml  issue-46d1cf02cf0906b13fb978ae4782525b286c1786.yaml  issue-573fb49da556afd28ef0488c08e63d47a810b8df.yaml  issue-66f39e8d340b7eebeac21833091c11f2fda90e37.yaml  issue-674b1e80bd19e722e2ad0043a92604578c03d4f1.yaml  issue-6be248a7a70304b17da9bbcd5a9dc164c5bb03df.yaml  issue-77ceadc4728c4172a84c260a338bd69cd9023fce.yaml  issue-78e6001e7b439198e24824fc162457b4d16cc78e.yaml  issue-812e55ebc7b56fff62b27251840b235407e33a00.yaml  issue-838fcc87fc531198e38d15ffa19e4e129f974501.yaml  issue-8c369d9d08c51b104415897fe699aae5e84e88db.yaml  issue-917cb191e0a5a43718496e25d80708cb1b47b9ba.yaml  project.yaml  (+11 more)
lib/: CMakeLists.txt  GroongaConfig.cmake.in  Makefile.am  Makefile.msvc  accessor.c  aggregators.c  alloc.c  applier.c  arrow.cpp  bulk.cpp  c_sources.am  cache.c  cast.cpp  column.c  com.c  com.h  command.c  command_arguments.cpp  compressor.c  conf.c  config.c  cpp_sources.am  ctx.c  ctx.cpp  ctx.h  ctx_impl.h  ctx_impl_duckdb.c  ctx_impl_lua.c  ctx_impl_mrb.c  dat.cpp  dat.h  db.c  db.h  db_wal_recover.cpp  distance.cpp  distance_avx.cpp  distance_avx2.cpp  distance_avx512.cpp  distance_common.cpp  distance_generic.cpp  (+258 more)
resource/: Makefile.am
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.msvc  grndb.c  grnslap.c  grntest.c  groonga.c  groonga_benchmark.c  groonga_mruby.c
tools/: Makefile.am  blosc-evaluate-visualize.rb  blosc-evaluate.cpp  check-index-merge-source-dump.rb  check-small-index-limit.rb  check-tiny-index-limit.rb  copy-related-files.rb  create-hash-table-with-duplicated-key.c  dump-wal.rb  exec-index-column-diff.sh  extract-index-source-from-dump.rb  filter-github-actions-workflow-command.rb  generate-alphabet-diacritical-mark.rb  generate-arrow-data.rb  generate-blog-entry-from-release-note.rb  generate-long-posting-list-data.rb  generate-many-segment-data.rb  generate-max-records-data.rb  groonga-analyze-query-log.rb  groonga-check-memory-leak.rb  groonga-memory-usage-analyzer.rb  groonga-query-log-analyzer  groonga-query-log-analyzer.rb  groonga-suggest-httpd-client.rb  object-inspect-all.sh  output-number-of-buffer-segments.rb  output-number-of-buffer-segments.sh  parse-backtrace.rb  parse-backtrace.sh  parsed-json.rb  prepare-gh-pages.sh  prepare-sphinx-html.rb  travis-before-script.sh  travis-install.sh  travis-script.sh  ucd-symbol-list.rb  verify-index-size-for-large-vector-delete.rb
yum/: Makefile.am  build-in-chroot.sh  build-repository-rpm.sh  build-rpm.sh  gpg-uid.sh  groonga-depended-packages  groonga-repository.spec  sign-rpm.sh  update-repository.sh
(+52055 files in other folders)
